Fix log image glow size in dark mode and change light mode shadow from drop shadow to bow shadow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -229,16 +229,23 @@
   }
 
   .logo-image {
-    // @apply z-50 mx-auto mt-24 mb-4 rounded-full drop-shadow-2xl dark:shadow-[0_0_30px_15px_rgba(255,255,255,0.6),0_0_50px_30px_rgba(255,0,255,0.5),0_0_70px_45px_rgba(0,255,255,0.5)];
-    // @apply z-20 mx-auto mt-24 mb-4 rounded-full drop-shadow-2xl md:w-48 md:h-48 max-w-[50%] max-h-[50%] w-[250px] h-[250px];
-    // @apply z-20 mx-auto mt-24 mb-4 rounded-full drop-shadow-2xl max-w-[50%] max-h-[50%] w-[250px] h-[250px];
-    @apply relative z-20 mx-auto mt-24 mb-4 rounded-full drop-shadow-2xl w-[250px] h-[250px];
+    // @apply relative z-20 mx-auto mt-24 mb-4 rounded-full shadow-[3px_3px_5px_10px_rgba(0,0,0,0.3)] w-[250px] h-[250px];
+    @apply relative z-20 mx-auto mt-24 mb-4 rounded-full w-[250px] h-[250px];
+    // box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+    // box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    box-shadow: rgba(17, 17, 26, 0.15) 0px 4px 16px, rgba(17, 17, 26, 0.15) 0px 8px 24px, rgba(17, 17, 26, 0.15) 0px 16px 56px;
+    @JsonIgnoreProperties
+    foo: bar;
+  }
+
+  .logo-image-glow {
+    @apply absolute top-0 left-0 w-[250px] h-[250px] rounded-full;
     @JsonIgnoreProperties
     foo: bar;
   }
 
   @media (max-width: 768px) {
-    .logo-image {
+    .logo-image, .logo-image-glow {
       width: 175px;
       height: 175px;
     }
